--- a/main/index.html
+++ b/main/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="https://cdn.cb-hosting.tech/nexurebotsV2/logos/LogoBackground.png" type="image/png" sizes="32x32" />
+    <link rel="icon" href="https://cdn.cb-hosting.tech/nexure-bots/LogoB.png" type="image/png" sizes="32x32" />
     <style>
         * {
             margin: 0;
@@ -25,7 +25,7 @@
         }
 
         .background {
-            display: none; /* Farbige Orbs entfernt */
+            display: none;
         }
 
         .container {
@@ -266,7 +266,7 @@
     </div>
 
     <div class="container">
-        <img src="https://cdn.cb-hosting.tech/nexurebotsV2/logos/LogoBackground.png" alt="Nexure Bots Logo" class="logo">
+        <img src="https://cdn.cb-hosting.tech/nexure-bots/LogoB.png" alt="Nexure Bots Logo" class="logo">
 
         <div class="top-link-container">
             <a href="nutzungsbedingungen.html" class="site-link">Nutzungsbedingungen</a>
