--- a/main/nutzungsbedingungen.html
+++ b/main/nutzungsbedingungen.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="https://cdn.cb-hosting.tech/nexurebotsV2/logos/LogoBackground.png" type="image/png" sizes="32x32" />
+    <link rel="icon" href="https://cdn.cb-hosting.tech/nexure-bots/LogoB.png" type="image/png" sizes="32x32" />
 
     <style>
         * {
@@ -205,7 +205,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">
-                <img src="https://cdn.cb-hosting.tech/nexurebotsV2/logos/LogoBackground.png" alt="Logo">
+                <img src="https://cdn.cb-hosting.tech/nexure-bots/LogoB.png" alt="Logo">
             </div>
             <a href="/" class="back-button">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
