--- a/main/index.html
+++ b/main/index.html
@@ -8,257 +8,223 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="https://cdn.cb-hosting.tech/nexure-bots/LogoB.png" type="image/png" sizes="32x32" />
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+    <link rel="icon" href="https://cdn.cb-hosting.tech/nexure-bots/Logo_Background.png" type="image/png" sizes="32x32" />
+   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        body {
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
-            color: #ffffff;
-            min-height: 100vh;
-            overflow-x: hidden;
-        }
+    body {
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #0a0a0a 0%, #1a1a1a 100%);
+      color: #ffffff;
+      min-height: 100vh;
+      overflow-x: hidden;
+    }
 
-        .background {
-            display: none;
-        }
+    .container {
+      max-width: 1400px;
+      margin: 0 auto;
+      padding: 2rem;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
 
-        .container {
-            position: relative;
-            z-index: 1;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            padding: 2rem;
-            max-width: 1400px;
-            margin: 0 auto;
-        }
+    .logo {
+      width: 90px;
+      height: 90px;
+      border-radius: 16px;
+      margin-bottom: 4rem;
+      animation: fadeInDown 0.8s ease-out;
+    }
 
-        .logo {
-            width: 90px;
-            height: 90px;
-            margin-bottom: 4rem;
-            border-radius: 16px;
-            animation: fadeInDown 0.8s ease-out;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
+    @keyframes fadeInDown {
+      from {
+        opacity: 0;
+        transform: translateY(-30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
 
-        @keyframes fadeInDown {
-            from {
-                opacity: 0;
-                transform: translateY(-30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
+    h1 {
+      font-family: 'Dancing Script', cursive;
+      font-size: clamp(3.5rem, 10vw, 7rem);
+      font-weight: 700;
+      background: linear-gradient(135deg, #ff5252, #e53935);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      margin-bottom: 0.5rem;
+    }
 
-        .content {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            max-width: 900px;
-        }
+    .subtitle {
+      color: #ffaaaa;
+      text-transform: uppercase;
+      letter-spacing: 0.1em;
+      font-weight: 600;
+      margin-bottom: 2rem;
+      animation: fadeInUp 0.8s ease-out 0.3s both;
+    }
 
-        .title-wrapper {
-            margin-bottom: 2rem;
-            animation: fadeInUp 0.8s ease-out 0.2s both;
-        }
+    .description {
+      color: #dddddd;
+      font-size: 1.25rem;
+      line-height: 1.8;
+      max-width: 700px;
+      margin-bottom: 3rem;
+      animation: fadeInUp 0.8s ease-out 0.4s both;
+    }
 
-        h1 {
-            font-family: 'Dancing Script', cursive;
-            font-size: clamp(3.5rem, 10vw, 7rem);
-            font-weight: 700;
-            line-height: 1.1;
-            background: linear-gradient(135deg, #ffffff, #cccccc);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            margin-bottom: 0.5rem;
-        }
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
 
-        .subtitle {
-            font-size: clamp(1rem, 2vw, 1.25rem);
-            color: #bbbbbb;
-            font-weight: 600;
-            letter-spacing: 0.1em;
-            text-transform: uppercase;
-            animation: fadeInUp 0.8s ease-out 0.3s both;
-        }
+    .top-link-container {
+      position: fixed;
+      top: 40px;
+      right: 40px;
+      z-index: 10;
+    }
 
-        .description {
-            font-size: clamp(1.125rem, 2vw, 1.375rem);
-            color: #dddddd;
-            line-height: 1.8;
-            margin-bottom: 3rem;
-            max-width: 700px;
-            animation: fadeInUp 0.8s ease-out 0.4s both;
-            font-weight: 400;
-        }
+    .site-link {
+      background: rgba(255, 82, 82, 0.1);
+      border: 1px solid #e53935;
+      padding: 0.75rem 1.5rem;
+      border-radius: 12px;
+      color: #ff5252;
+      text-decoration: none;
+      font-weight: 500;
+      transition: 0.3s ease;
+    }
 
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
+    .site-link:hover {
+      background: rgba(255, 82, 82, 0.2);
+      color: #fff;
+      transform: translateY(-2px);
+    }
 
-        .top-link-container {
-            position: fixed;
-            top: 40px;
-            right: 40px;
-            z-index: 10;
-        }
+    .discord-button {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.75rem;
+      padding: 1.25rem 2.5rem;
+      font-size: 1.125rem;
+      font-weight: 600;
+      color: #fff;
+      background: linear-gradient(135deg, #e53935, #b71c1c);
+      border: none;
+      border-radius: 16px;
+      cursor: pointer;
+      text-decoration: none;
+      transition: all 0.3s ease;
+      animation: fadeInUp 0.8s ease-out 0.6s both;
+      box-shadow: 0 10px 40px rgba(229, 57, 53, 0.3);
+      position: relative;
+      overflow: hidden;
+    }
 
-        .site-link {
-            font-size: clamp(0.875rem, 1.5vw, 1rem);
-            color: #dddddd;
-            text-decoration: none;
-            padding: 0.75rem 1.5rem;
-            border-radius: 12px;
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            transition: all 0.3s ease;
-            animation: fadeInDown 0.8s ease-out 0.5s both;
-            display: inline-block;
-        }
+    .discord-button::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+      transition: left 0.5s ease;
+    }
 
-        .site-link:hover {
-            background: rgba(255, 255, 255, 0.1);
-            border-color: rgba(255, 255, 255, 0.3);
-            color: #ffffff;
-            transform: translateY(-2px);
-            box-shadow: 0 10px 30px rgba(255, 255, 255, 0.1);
-        }
+    .discord-button:hover::before {
+      left: 100%;
+    }
 
-        .discord-button {
-            display: inline-flex;
-            align-items: center;
-            gap: 0.75rem;
-            padding: 1.25rem 2.5rem;
-            font-size: clamp(1rem, 2vw, 1.125rem);
-            font-weight: 600;
-            color: #ffffff;
-            background: linear-gradient(135deg, #444, #222);
-            border: none;
-            border-radius: 16px;
-            text-decoration: none;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            animation: fadeInUp 0.8s ease-out 0.6s both;
-            box-shadow: 0 10px 40px rgba(255, 255, 255, 0.05);
-            position: relative;
-            overflow: hidden;
-            width: fit-content;
-        }
+    .discord-button:hover {
+      transform: translateY(-3px) scale(1.02);
+      box-shadow: 0 15px 50px rgba(229, 57, 53, 0.4);
+    }
 
-        .discord-button::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.15), transparent);
-            transition: left 0.5s ease;
-        }
+    .discord-icon {
+      width: 24px;
+      height: 24px;
+      flex-shrink: 0;
+    }
 
-        .discord-button:hover::before {
-            left: 100%;
-        }
+    .features {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1.5rem;
+      margin-top: 3rem;
+      animation: fadeInUp 0.8s ease-out 0.7s both;
+    }
 
-        .discord-button:hover {
-            transform: translateY(-3px) scale(1.02);
-            box-shadow: 0 15px 50px rgba(255, 255, 255, 0.1);
-        }
+    .feature-card {
+      background: rgba(255, 255, 255, 0.03);
+      border: 1px solid #e53935;
+      border-radius: 16px;
+      padding: 1.5rem;
+      text-align: center;
+      transition: 0.3s ease;
+    }
 
-        .discord-button:active {
-            transform: translateY(-1px) scale(0.98);
-        }
+    .feature-card:hover {
+      background: rgba(229, 57, 53, 0.1);
+      transform: translateY(-5px);
+      box-shadow: 0 10px 30px rgba(255, 82, 82, 0.15);
+    }
 
-        .discord-icon {
-            width: 24px;
-            height: 24px;
-            flex-shrink: 0;
-        }
+    .feature-icon {
+      font-size: 2rem;
+      color: #ff5252;
+      margin-bottom: 0.75rem;
+    }
 
-        .features {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1.5rem;
-            margin-top: 3rem;
-            animation: fadeInUp 0.8s ease-out 0.7s both;
-        }
+    .feature-title {
+      font-size: 1.125rem;
+      font-weight: 600;
+      color: #ffffff;
+      margin-bottom: 0.5rem;
+    }
 
-        .feature-card {
-            padding: 1.5rem;
-            background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.08);
-            border-radius: 16px;
-            transition: all 0.3s ease;
-            text-align: center;
-        }
+    .feature-text {
+      font-size: 0.875rem;
+      color: #cccccc;
+      line-height: 1.6;
+    }
 
-        .feature-card:hover {
-            background: rgba(255, 255, 255, 0.05);
-            border-color: rgba(255, 255, 255, 0.2);
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(255, 255, 255, 0.1);
-        }
+    @media (max-width: 768px) {
+      .container {
+        padding: 1.5rem;
+      }
 
-        .feature-icon {
-            font-size: 2rem;
-            margin-bottom: 0.75rem;
-            color: #ccc;
-        }
+      .logo {
+        width: 70px;
+        height: 70px;
+        margin-bottom: 3rem;
+      }
 
-        .feature-title {
-            font-size: 1.125rem;
-            font-weight: 600;
-            margin-bottom: 0.5rem;
-            color: #ffffff;
-        }
+      .top-link-container {
+        top: 20px;
+        right: 20px;
+      }
 
-        .feature-text {
-            font-size: 0.875rem;
-            color: #aaaaaa;
-            line-height: 1.6;
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                padding: 1.5rem;
-            }
-
-            .logo {
-                width: 70px;
-                height: 70px;
-                margin-bottom: 3rem;
-            }
-
-            .top-link-container {
-                top: 20px;
-                right: 20px;
-            }
-
-            .features {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
+      .features {
+        grid-template-columns: 1fr;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -266,7 +232,7 @@
     </div>
 
     <div class="container">
-        <img src="https://cdn.cb-hosting.tech/nexure-bots/LogoB.png" alt="Nexure Bots Logo" class="logo">
+        <img src="https://cdn.cb-hosting.tech/nexure-bots/Logo_Background.png" alt="Nexure Bots Logo" class="logo">
 
         <div class="top-link-container">
             <a href="nutzungsbedingungen.html" class="site-link">Nutzungsbedingungen</a>
