--- a/main/nutzungsbedingungen.html
+++ b/main/nutzungsbedingungen.html
@@ -7,195 +7,198 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="https://cdn.cb-hosting.tech/nexure-bots/LogoB.png" type="image/png" sizes="32x32" />
+    <link rel="icon" href="https://cdn.cb-hosting.tech/nexure-bots/Logo_Background.png" type="image/png" sizes="32x32" />
 
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-        body {
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(to right, #0a0a0a 0%, #1a1a1a 100%);
-            color: #ffffff;
-            min-height: 100vh;
-            overflow-x: hidden;
-            position: relative;
-        }
+body {
+    font-family: 'Inter', sans-serif;
+    background: linear-gradient(to right, #000000 0%, #0a0a0a 100%);
+    color: #ffffff;
+    min-height: 100vh;
+    overflow-x: hidden;
+    position: relative;
+}
 
-        .gradient-orb {
-            position: fixed;
-            border-radius: 50%;
-            filter: blur(120px);
-            opacity: 0.15;
-            pointer-events: none;
-            z-index: 0;
-        }
+.gradient-orb {
+    position: fixed;
+    border-radius: 50%;
+    filter: blur(120px);
+    opacity: 0.15;
+    pointer-events: none;
+    z-index: 0;
+}
 
-        .orb-1 {
-            width: 600px;
-            height: 600px;
-            background: radial-gradient(circle, rgba(88, 101, 242, 0.3) 0%, transparent 70%);
-            top: -200px;
-            right: -200px;
-            animation: float 20s ease-in-out infinite;
-        }
+.orb-1 {
+    width: 600px;
+    height: 600px;
+    background: radial-gradient(circle, rgba(229, 9, 20, 0.3) 0%, transparent 70%);
+    top: -200px;
+    right: -200px;
+    animation: float 20s ease-in-out infinite;
+}
 
-        .orb-2 {
-            width: 500px;
-            height: 500px;
-            background: radial-gradient(circle, rgba(88, 101, 242, 0.2) 0%, transparent 70%);
-            bottom: -150px;
-            right: 10%;
-            animation: float 15s ease-in-out infinite reverse;
-        }
+.orb-2 {
+    width: 500px;
+    height: 500px;
+    background: radial-gradient(circle, rgba(229, 9, 20, 0.2) 0%, transparent 70%);
+    bottom: -150px;
+    right: 10%;
+    animation: float 15s ease-in-out infinite reverse;
+}
 
-        @keyframes float {
-            0%, 100% { transform: translate(0, 0) scale(1); }
-            50% { transform: translate(-30px, 30px) scale(1.1); }
-        }
+@keyframes float {
+    0%, 100% { transform: translate(0, 0) scale(1); }
+    50% { transform: translate(-30px, 30px) scale(1.1); }
+}
 
-        .container {
-            position: relative;
-            z-index: 1;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 40px 60px 80px;
-        }
+.container {
+    position: relative;
+    z-index: 1;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 40px 60px 80px;
+}
 
-        .header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin-bottom: 60px;
-            opacity: 0;
-            animation: fadeIn 1s ease-out forwards;
-        }
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 60px;
+    opacity: 0;
+    animation: fadeIn 1s ease-out forwards;
+}
 
-        .logo {
-            width: 80px;
-            height: 80px;
-        }
+.logo {
+    width: 80px;
+    height: 80px;
+}
 
-        .logo img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
+.logo img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 
-        .back-button {
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-            background: #5865F2;
-            color: #ffffff;
-            padding: 12px 24px;
-            border-radius: 8px;
-            text-decoration: none;
-            font-weight: 600;
-            font-size: 0.95rem;
-            transition: all 0.3s ease;
-        }
+.back-button {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    background: #E50914;
+    color: #ffffff;
+    padding: 12px 24px;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 0.95rem;
+    transition: all 0.3s ease;
+}
 
-        .back-button:hover {
-            background: #4752C4;
-            transform: translateY(-2px);
-            box-shadow: 0 8px 20px rgba(88, 101, 242, 0.4);
-        }
+.back-button:hover {
+    background: #b20710;
+    transform: translateY(-2px);
+    box-shadow: 0 8px 20px rgba(229, 9, 20, 0.4);
+}
 
-        .content {
-            max-width: 900px;
-            opacity: 0;
-            animation: fadeIn 1s ease-out 0.2s forwards;
-        }
+.content {
+    max-width: 900px;
+    opacity: 0;
+    animation: fadeIn 1s ease-out 0.2s forwards;
+}
 
-        h1 {
-            font-size: 3rem;
-            font-weight: 700;
-            margin-bottom: 40px;
-            color: #ffffff;
-        }
+h1 {
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 40px;
+    color: #ffffff;
+}
 
-        h2 {
-            font-size: 1.75rem;
-            font-weight: 600;
-            margin-top: 40px;
-            margin-bottom: 20px;
-            color: #ffffff;
-        }
+h2 {
+    font-size: 1.75rem;
+    font-weight: 600;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    color: #ffffff;
+    border-left: 4px solid #E50914;
+    padding-left: 12px;
+}
 
-        p {
-            font-size: 1.0625rem;
-            line-height: 1.7;
-            color: #a0a0a0;
-            margin-bottom: 20px;
-        }
+p {
+    font-size: 1.0625rem;
+    line-height: 1.7;
+    color: #cccccc;
+    margin-bottom: 20px;
+}
 
-        ul, ol {
-            margin-left: 24px;
-            margin-bottom: 20px;
-        }
+ul, ol {
+    margin-left: 24px;
+    margin-bottom: 20px;
+}
 
-        li {
-            font-size: 1.0625rem;
-            line-height: 1.7;
-            color: #a0a0a0;
-            margin-bottom: 12px;
-        }
+li {
+    font-size: 1.0625rem;
+    line-height: 1.7;
+    color: #cccccc;
+    margin-bottom: 12px;
+}
 
-        strong {
-            color: #ffffff;
-            font-weight: 600;
-        }
+strong {
+    color: #ffffff;
+    font-weight: 600;
+}
 
-        .last-updated {
-            font-size: 0.95rem;
-            color: #808080;
-            margin-bottom: 40px;
-            font-style: italic;
-        }
+.last-updated {
+    font-size: 0.95rem;
+    color: #999999;
+    margin-bottom: 40px;
+    font-style: italic;
+}
 
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 
-        @media (max-width: 768px) {
-            .container {
-                padding: 30px 30px 60px;
-            }
+@media (max-width: 768px) {
+    .container {
+        padding: 30px 30px 60px;
+    }
 
-            .header {
-                flex-direction: column;
-                gap: 20px;
-                align-items: flex-start;
-            }
+    .header {
+        flex-direction: column;
+        gap: 20px;
+        align-items: flex-start;
+    }
 
-            .logo {
-                width: 60px;
-                height: 60px;
-            }
+    .logo {
+        width: 60px;
+        height: 60px;
+    }
 
-            h1 {
-                font-size: 2rem;
-            }
+    h1 {
+        font-size: 2rem;
+    }
 
-            h2 {
-                font-size: 1.5rem;
-            }
+    h2 {
+        font-size: 1.5rem;
+    }
 
-            p, li {
-                font-size: 1rem;
-            }
-        }
+    p, li {
+        font-size: 1rem;
+    }
+}
+
     </style>
 </head>
 <body>
@@ -205,7 +208,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">
-                <img src="https://cdn.cb-hosting.tech/nexure-bots/LogoB.png" alt="Logo">
+                <img src="https://cdn.cb-hosting.tech/nexure-bots/Logo_Background.png" alt="Logo">
             </div>
             <a href="/" class="back-button">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
