--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
         <img src="https://cdn.cb-hosting.tech/nexure-bots/Logo_Background.png" alt="Nexure Bots Logo" class="logo">
 
         <div class="top-link-container">
+            <a href="preisliste.html" class="site-link">Preise</a>
+            <a href="https://status.nexurebots.de" class="site-link">Status</a>
             <a href="nutzungsbedingungen.html" class="site-link">Nutzungsbedingungen</a>
         </div>
 
