--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
 </h1>
 
                 
-                <p class="text-xl text-gray-400 mb-8 leading-relaxed">
-                    Nexure programmiert kostenlos und freiwillig FiveM Scripts und Discord Bots, damit keiner extrem viel Geld ausgeben muss. Bei uns, kannst du auch Anfangen, selbstständig zu programmieren! Wir helfen dir!
-                </p>
-
+<p class="text-xl text-gray-400 mb-8 leading-relaxed">
+    Nexure entwickelt kostenlos FiveM Scripts und Discord Bots. Bei uns kannst du selbst programmieren lernen – wir helfen dir dabei!
+</p>
                 <div class="flex gap-4">
                     <a href="repos.html" class="px-6 py-3 bg-cyan hover:bg-cyan-400 text-dark-900 font-semibold rounded-lg transition-colors">
                         Repositorys ansehen
@@ -60,3 +59,4 @@
     <script src="assets/js/footer.js"></script>
 </body>
 </html>
+
