--- a/repos.html
+++ b/repos.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-                	<!-- START repo 1 --!>
+                	<!-- START repo 1 -->
                 <div class="bg-dark-800 border border-gray-800 rounded-lg p-6 hover:border-cyan/50 transition-all">
                     <div class="flex items-start justify-between mb-4">
                         <div class="p-3 bg-dark-700 rounded-lg">
@@ -64,9 +64,9 @@
                         </svg>
                     </a>
                 </div>
-	<!-- END repo 1 --!>
+	<!-- END repo 1 -->
 
-	<!-- START repo 2 --!>
+	<!-- START repo 2 -->
 
                 <div class="bg-dark-800 border border-gray-800 rounded-lg p-6 hover:border-cyan/50 transition-all">
                     <div class="flex items-start justify-between mb-4">
@@ -92,9 +92,9 @@
                         </svg>
                     </a>
                 </div>
-	<!-- END repo 2 --!>
+	<!-- END repo 2 -->
 
-                	<!-- START repo 3 --!>
+                	<!-- START repo 3 -->
                 <div class="bg-dark-800 border border-gray-800 rounded-lg p-6 hover:border-cyan/50 transition-all">
                     <div class="flex items-start justify-between mb-4">
                         <div class="p-3 bg-dark-700 rounded-lg">
@@ -122,15 +122,13 @@
                         </svg>
                     </a>
                 </div>
-	<!-- END repo 3 --!>
+	<!-- END repo 3 -->
 
             </div>
         </div>
     </section>
 
-    <div id="footer"></div>
-
     <script src="assets/js/navbar.js"></script>
-    <script src="assets/js/footer.js"></script>
 </body>
 </html>
+
