Fix HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@
                 </div>
                 
                 <h1 class="text-5xl sm:text-6xl lg:text-7xl font-black leading-tight mb-6 text-balance">
-                    Programmieren <span class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-cyan-500 to-blue-500">zuerst!</span>
+                  Code. <span class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-cyan-500 to-blue-500">Create.</span> Connect.
                 </h1>
+
                 
                 <p class="text-xl sm:text-2xl text-gray-400 mb-10 leading-relaxed max-w-3xl text-pretty">
                     Nexure entwickelt kostenlos FiveM Scripts und Discord Bots. Bei uns kannst du selbst programmieren lernen – wir helfen dir dabei!
@@ -143,3 +144,4 @@
     </script>
 </body>
 </html>
+
