--- a/repos.html
+++ b/repos.html
@@ -123,7 +123,7 @@
                         <span class="px-2.5 py-1 bg-slate-800/50 text-gray-300 text-xs font-medium rounded-md border border-slate-700/50">Lua</span>
                     </div>
                     
-                    <a href="https://github.com/Nexure-Dev" target="_blank" class="inline-flex items-center gap-2 text-cyan-400 hover:text-cyan-300 font-medium text-sm transition-colors group/link">
+                    <a href="https://github.com/Nexure-Dev/nexure_rpc" target="_blank" class="inline-flex items-center gap-2 text-cyan-400 hover:text-cyan-300 font-medium text-sm transition-colors group/link">
                         Auf GitHub ansehen
                         <svg class="w-4 h-4 group-hover/link:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/>
@@ -170,3 +170,4 @@
     </script>
 </body>
 </html>
+
