added imprint & privacy site

--- a/index.html
+++ b/index.html
@@ -77,11 +77,10 @@
                     <span class="px-3 py-1 bg-cyan-500/10 text-cyan-400 text-sm font-medium rounded-full border border-cyan-500/20">Open Source Development</span>
                 </div>
                 
-                <h1 class="text-5xl sm:text-6xl lg:text-7xl font-black leading-tight mb-6 text-balance">
-                  Code. <span class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-cyan-500 to-blue-500">Create.</span> Connect.
-                </h1>
+              <h1 class="text-5xl sm:text-6xl lg:text-7xl font-black leading-tight mb-6 text-balance">
+  Code. <span class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 via-cyan-500 to-blue-500">Create.</span> Connect.
+</h1>
 
-                
                 <p class="text-xl sm:text-2xl text-gray-400 mb-10 leading-relaxed max-w-3xl text-pretty">
                     Nexure entwickelt kostenlos FiveM Scripts und Discord Bots. Bei uns kannst du selbst programmieren lernen – wir helfen dir dabei!
                 </p>
@@ -136,6 +135,16 @@
         </div>
     </section>
 
+        <footer class="border-t border-slate-800/50 bg-slate-900/30 backdrop-blur-xl py-8 px-6 mt-20">
+        <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center gap-4">
+            <p class="text-gray-400 text-sm">© 2025 Nexure Development. Alle Rechte vorbehalten.</p>
+            <div class="flex gap-6">
+                <a href="impressum.html" class="text-gray-400 hover:text-cyan-400 text-sm transition-colors">Impressum</a>
+                <a href="datenschutz.html" class="text-gray-400 hover:text-cyan-400 text-sm transition-colors">Datenschutz</a>
+            </div>
+        </div>
+    </footer>
+
     <script>
         function toggleMobileMenu() {
             const menu = document.getElementById('mobileMenu');
@@ -144,4 +153,3 @@
     </script>
 </body>
 </html>
-
