--- a/repos.html
+++ b/repos.html
@@ -123,7 +123,7 @@
                         <span class="px-2.5 py-1 bg-slate-800/50 text-gray-300 text-xs font-medium rounded-md border border-slate-700/50">Lua</span>
                     </div>
                     
-                    <a href="https://github.com/Nexure-Dev/nexure_rpc" target="_blank" class="inline-flex items-center gap-2 text-cyan-400 hover:text-cyan-300 font-medium text-sm transition-colors group/link">
+                    <a href="https://github.com/Nexure-Dev" target="_blank" class="inline-flex items-center gap-2 text-cyan-400 hover:text-cyan-300 font-medium text-sm transition-colors group/link">
                         Auf GitHub ansehen
                         <svg class="w-4 h-4 group-hover/link:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"/>
@@ -162,6 +162,16 @@
         </div>
     </section>
 
+        <footer class="border-t border-slate-800/50 bg-slate-900/30 backdrop-blur-xl py-8 px-6 mt-20">
+        <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center gap-4">
+            <p class="text-gray-400 text-sm">© 2025 Nexure Development. Alle Rechte vorbehalten.</p>
+            <div class="flex gap-6">
+                <a href="impressum.html" class="text-gray-400 hover:text-cyan-400 text-sm transition-colors">Impressum</a>
+                <a href="datenschutz.html" class="text-gray-400 hover:text-cyan-400 text-sm transition-colors">Datenschutz</a>
+            </div>
+        </div>
+    </footer>
+
     <script>
         function toggleMobileMenu() {
             const menu = document.getElementById('mobileMenu');
@@ -170,4 +180,3 @@
     </script>
 </body>
 </html>
-
