--- a/forum-datenschutz.html
+++ b/forum-datenschutz.html
@@ -42,12 +42,13 @@
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center gap-3">
                     <img src="https://cdn.jsdelivr.net/gh/Nexure-Dev/assets@main/Logos/nexure_logo.png" alt="Nexure Logo" class="w-9 h-9">
-                    <span class="text-xl font-bold text-white tracking-tight">Nexure Forum</span>
+                    <span class="text-xl font-bold text-white tracking-tight">Nexure</span>
                 </div>
                 
                 <div class="hidden md:flex items-center gap-8">
-                    <a href="https://nexure-dev.de" class="text-gray-400 hover:text-white text-sm transition-colors">Hauptseite</a>
-                    <a href="https://forum.nexure-dev.de" class="text-gray-400 hover:text-white text-sm transition-colors">Forum</a>
+                    <a href="index.html" class="text-gray-400 hover:text-white text-sm transition-colors">Home</a>
+                    <a href="repos.html" class="text-gray-400 hover:text-white text-sm transition-colors">Repositories</a>
+                    <a href="https://forum.nexure-dev.de" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white text-sm transition-colors">Forum</a>
                     <a href="https://dsc.gg/nexure" target="_blank" rel="noopener noreferrer" class="px-4 py-2 bg-cyan-500 hover:bg-cyan-400 text-slate-950 font-semibold text-sm rounded-lg transition-all hover:shadow-lg hover:shadow-cyan-500/20">Discord Server</a>
                 </div>
 
@@ -61,8 +62,9 @@
 
         <div id="mobileMenu" class="hidden md:hidden border-t border-slate-800/50 bg-slate-900/95 backdrop-blur-xl">
             <div class="px-6 py-4 space-y-3">
-                <a href="https://nexure-dev.de" class="block text-gray-400 hover:text-white text-sm py-2 transition-colors">Hauptseite</a>
-                <a href="https://forum.nexure-dev.de" class="block text-gray-400 hover:text-white text-sm py-2 transition-colors">Forum</a>
+                <a href="index.html" class="block text-gray-400 hover:text-white text-sm py-2 transition-colors">Home</a>
+                <a href="repos.html" class="block text-gray-400 hover:text-white text-sm py-2 transition-colors">Repositories</a>
+                <a href="https://forum.nexure-dev.de" target="_blank" rel="noopener noreferrer" class="block text-gray-400 hover:text-white text-sm py-2 transition-colors">Forum</a>
                 <a href="https://dsc.gg/nexure" target="_blank" rel="noopener noreferrer" class="block px-4 py-2 bg-cyan-500 hover:bg-cyan-400 text-slate-950 font-semibold text-sm rounded-lg transition-all text-center">Discord Server</a>
             </div>
         </div>
@@ -364,4 +366,5 @@
         }
     </script>
 </body>
+
 </html>
